Borrar homecomponent que no estaba en modo standalone

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <main>
+    <section class="router-outlet"></section>
+    
     <section class="about-section light-background">
         <div class="about-content reverse">
             <img src="https://www.icontec.org/wp-content/uploads/2021/08/energia.jpg" alt="Historical Factors">
