Commit para trabajar en main a partir de ahora

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<!-- <header>
+  <div class="header-left">
+    <img src="img/logo.jpg" alt="Logo">
+    <nav>
+      <a routerLink="/" routerLinkActive="active">Home</a>
+      <a routerLink="/biomassa" routerLinkActive="active">Biomasa</a>
+      <a routerLink="/hidraulica" routerLinkActive="active">Hidráulica</a>
+      <a routerLink="/solar" routerLinkActive="active">Solar</a>
+      <a routerLink="/eolica" routerLinkActive="active">Eólica</a>
+      <a routerLink="/buscador" routerLinkActive="active">Buscador</a>
+    </nav>
+  </div>
+</header>
 <main>
-  <router-outlet></router-outlet>
-</main>
+  <app-root></app-root>
+</main> -->
