--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -7,10 +7,10 @@
     <pre>{{paisesFiltrados}}</pre>
   </div>
 
-  <ul>
-    <!-- <li *ngFor="let pais of paisesFiltrados">
+  <!-- <ul>
+    <li *ngFor="let pais of paisesFiltrados">
       {{ pais.nombre }},
       {{ pais.energia}}
-    </li> -->
-  </ul>
+    </li>
+  </ul> -->
 </div>
