--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,61 @@
 <main>
+    <div class="container">
+      <div class="column" *ngFor="let component of components; let i = index" [ngClass]="component.name.toLowerCase()">
+        <div class="inner" [ngClass]="{'flipped': component.isFlipped}">
+  
+          <div class="front">
+            <p class="name">{{ component.name }}</p>
+            <button class="button rotate-button" (click)="rotateColumn(i)">Rotar</button>
+          </div>
+  
+          <div class="back">
+            <p>Información adicional sobre {{ component.name }}</p>
+            <button class="button" [routerLink]="component.link">Ir a {{ component.name }}</button>
+            <button class="button rotate-button" (click)="rotateColumn(i)">Volver</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  
     <section class="router-outlet"></section>
-    
+  
     <section class="about-section light-background">
-        <div class="about-content reverse">
-            <img src="https://www.icontec.org/wp-content/uploads/2021/08/energia.jpg" alt="Historical Factors">
-            <div>
-                <h2>Importancia de las energias renovables</h2>
-                <p>A lo largo de la historia, eventos como guerras, pandemias y desastres naturales...</p>
-            </div>
+      <div class="about-content reverse">
+        <img src="https://www.icontec.org/wp-content/uploads/2021/08/energia.jpg" alt="Historical Factors">
+        <div>
+          <h2>Importancia de las energias renovables</h2>
+          <p>A lo largo de la historia, eventos como guerras, pandemias y desastres naturales...</p>
         </div>
+      </div>
     </section>
-
+  
     <section class="about-section dark-background">
-        <div class="about-content">
-            <img src="https://global.unitednations.entermediadb.net/assets/mediadb/services/module/asset/downloads/preset/assets/2016/11/25972/image770x420cropped.jpg"
-                alt="Economic Factors">
-            <div>
-                <h2>Gases de efecto invernadero y depencia al combustible fósil</h2>
-                <p>El crecimiento económico de un país influye directamente en su crecimiento poblacional...</p>
-            </div>
+      <div class="about-content">
+        <img src="https://global.unitednations.entermediadb.net/assets/mediadb/services/module/asset/downloads/preset/assets/2016/11/25972/image770x420cropped.jpg" alt="Economic Factors">
+        <div>
+          <h2>Gases de efecto invernadero y depencia al combustible fósil</h2>
+          <p>El crecimiento económico de un país influye directamente en su crecimiento poblacional...</p>
         </div>
+      </div>
     </section>
-
+  
     <section class="about-section light-background">
-        <div class="about-content reverse">
-            <img src="https://elbiensocial.org/wp-content/uploads/2018/08/descubriendo-los-objetivos-del-desarrollo-sostenible.jpg"
-                alt="Cultural Factors">
-            <div>
-                <h2>Transicion a un modelo más sostenible</h2>
-                <p>Las creencias y valores culturales desempeñan un papel central en las decisiones sobre el tamaño de
-                    las familias...</p>
-            </div>
+      <div class="about-content reverse">
+        <img src="https://elbiensocial.org/wp-content/uploads/2018/08/descubriendo-los-objetivos-del-desarrollo-sostenible.jpg" alt="Cultural Factors">
+        <div>
+          <h2>Transicion a un modelo más sostenible</h2>
+          <p>Las creencias y valores culturales desempeñan un papel central en las decisiones sobre el tamaño de las familias...</p>
         </div>
+      </div>
     </section>
-
+  
     <section class="about-section dark-background">
-        <div class="about-content">
-            <img src="https://daniperezmalaga.es/wp-content/uploads/acciones-sostenibles-en-accion.jpg"
-                alt="Technological Factors">
-            <div>
-                <h2>Beneficios</h2>
-                <p>El avance tecnológico ha sido uno de los motores más poderosos del crecimiento poblacional...</p>
-            </div>
+      <div class="about-content">
+        <img src="https://daniperezmalaga.es/wp-content/uploads/acciones-sostenibles-en-accion.jpg" alt="Technological Factors">
+        <div>
+          <h2>Beneficios</h2>
+          <p>El avance tecnológico ha sido uno de los motores más poderosos del crecimiento poblacional...</p>
         </div>
+      </div>
     </section>
-
-</main>
+  </main>
