--- a/src/app/biomassa/biomassa.component.html
+++ b/src/app/biomassa/biomassa.component.html
@@ -1,1 +1,157 @@
-<p>biomassa works!</p>
+<main>
+    <section class="about-section light-background">
+        <div class="about-content reverse">
+          <img src="https://naturalfire.es/wp-content/uploads/2023/04/Origen-y-procedencia-de-la-biomasa.jpg" alt="FOTO">
+          <div>
+            <h2>¿Qué es la biomasa?</h2>
+            <p>La biomasa es cualquier material biológico utilizado como fuente de energía. Esto incluye residuos de plantas, animales y microorganismos. Puede ser utilizada para generar electricidad, calor o biocombustibles.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="about-section dark-background">
+        <div class="about-content">
+            <div>
+                <h2>Uso de la Biomasa en el Mundo</h2>
+                <p>La biomasa se utiliza en todo el mundo como una fuente alternativa de energía. Países como Estados Unidos, Brasil y China son grandes productores y consumidores de biocombustibles. En Europa, la biomasa se usa principalmente para calefacción y generación de electricidad, con políticas gubernamentales que fomentan su uso debido a los beneficios ambientales.</p>
+            </div>
+        </div>
+    </section>
+    
+    <section class="about-section light-background">
+        <div class="about-content reverse">
+                <img src="https://www.industriaquimica.es/media/uploads/noticias/Foto-entrada36.gif" alt="FOTO">
+            <div>
+                <h2>Líderes en el uso de biomasa como fuente de energía</h2>
+                <ul class="benefits-list">
+                    <li>Estados Unidos</li>
+                    <li>China</li>
+                    <li>Brasil</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    
+    <section class="about-section dark-background">
+        <div class="about-content">
+            <div>
+                <h2>Desafíos y Consideraciones</h2>
+                <p>A pesar de sus ventajas, el uso de la biomasa también presenta algunos desafíos. La competencia por el uso de tierras agrícolas, la posible deforestación y los costos de producción elevados son algunos de los problemas que deben abordarse para maximizar sus beneficios.</p>
+            </div>
+        </div>
+    </section>
+    
+
+      <section class="about-section light-background">
+        <h2>Tipos de Biomasa</h2>
+        <mat-tab-group>
+            <mat-tab label="Biomasa sólida" [ngClass]="'mat-tab-color'">
+                <div class="mat-tab-content" >
+                        <div class="tab-text-container">
+                            <p>La biomasa sólida incluye madera, residuos agrícolas y otros materiales orgánicos sólidos. Estos materiales son una fuente primaria de energía renovable. Se utilizan principalmente para calefacción y generación de electricidad.</p>
+                        </div>
+                            <div class="tab-content-wrapper">
+                                <div class="column">
+                                    <h3>Material</h3>
+                                    <ul>
+                                        <li>Madera</li>
+                                        <li>Residuos agrícolas</li>
+                                    </ul>
+                                </div>
+                                <div class="column">
+                                    <h3>Uso</h3>
+                                    <ul>
+                                        <li>Generación de energía</li>
+                                        <li>Biocombustibles</li>
+                                    </ul>
+                                </div>
+                                <div class="column">
+                                    <h3>Ventajas</h3>
+                                    <ul>
+                                        <li>Renovable, disponible localmente</li>
+                                        <li>Disminuye la contaminación, reutiliza residuos</li>
+                                    </ul>
+                                </div>
+                                
+                            </div>   
+                            <blockquote>
+                                "La biomasa sólida es una fuente confiable de energía renovable, aprovechando recursos naturales locales como madera y residuos agrícolas."
+                            </blockquote>                            
+                    
+                </div>
+            </mat-tab>
+            <mat-tab label="Biocombustibles líquidos">
+                <div class="mat-tab-content">
+                        <div class="tab-text-container">
+                            <p>Los biocombustibles líquidos, como el biodiesel y el etanol, se producen a partir de cultivos como la caña de azúcar, el maíz o la remolacha. Estos biocombustibles se utilizan como alternativas a los combustibles fósiles en vehículos.</p>
+                        </div>
+                        <div class="tab-content-wrapper">
+                            <div class="column">
+                                <h3>Material</h3>
+                                <ul>
+                                    <li>Caña de azúcar</li>
+                                    <li>Maíz</li>
+                                    <li>Remolacha</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3>Uso</h3>
+                                <ul>
+                                    <li>Producción de biodiesel</li>
+                                    <li>Producción de etanol</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3>Ventajas</h3>
+                                <ul>
+                                    <li>Reducción de gases contaminantes</li>
+                                    <li>Mayor eficiencia energética</li>
+                                    <li>Fomenta la economía local</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <blockquote>
+                        "Los biocombustibles líquidos son una alternativa sostenible a los combustibles fósiles, promoviendo la economía local y reduciendo las emisiones."
+                    </blockquote>                    
+            </mat-tab>
+            <mat-tab label="Biogás">
+                <div class="mat-tab-content">
+                        <div class="tab-text-container">
+                            <p>El biogás se genera a partir de residuos orgánicos en digestores anaeróbicos. Este gas se puede usar para la producción de electricidad o como combustible para calefacción y vehículos.</p>
+                        </div>
+                        <div class="tab-content-wrapper">
+                            <div class="column">
+                                <h3>Material</h3>
+                                <ul>
+                                    <li>Residuos orgánicos</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3>Uso</h3>
+                                <ul>
+                                    <li>Generación de electricidad</li>
+                                    <li>Combustible para calefacción</li>
+                                    <li>Combustible para vehículos</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3>Ventajas</h3>
+                                <ul>
+                                    <li>Fuente limpia de energía</li>
+                                    <li>Reduce emisiones de metano</li>
+                                    <li>Reutiliza residuos</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <blockquote>
+                            "El biogás es una fuente limpia y renovable de energía que reduce los desechos y las emisiones de metano."
+                        </blockquote>
+                    </div>
+            </mat-tab>
+        </mat-tab-group>
+    </section>
+    
+
+
+</main>
